force-app/main/default/objects/Data_Manager_Field__mdt/Data_Manager_Field__mdt.object-meta.xml
<CustomObject>
    <label>Data Manager Field</label>
    <pluralLabel>Data Manager Fields</pluralLabel>
</CustomObject>