force-app/main/default/objects/Data_Manager_Field__mdt/fields/Comparative_Operator__c.field-meta.xml
<CustomField>
    <fullName>Comparative_Operator__c</fullName>
    <label>Comparative Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equal</fullName>
            </value>
            <value>
                <fullName>Less Than</fullName>
            </value>
            <value>
                <fullName>Less Than Equal To</fullName>
            </value>
            <value>
                <fullName>Greater Than</fullName>
            </value>
            <value>
                <fullName>Greater Than Equal To</fullName>
            </value>
            <value>
                <fullName>Not Equal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>