force-app/main/default/objects/Data_Manager_Field__mdt/fields/Compare_API_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Compare_API_Field_Name__c</fullName>
    <label>Compare API Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>