force-app/main/default/objects/Data_Manager_Field__mdt/fields/Data_Manager_ObjectId__c.field-meta.xml
<CustomField>
    <fullName>Data_Manager_ObjectId__c</fullName>
    <label>Data Manager Object Name</label>
    <referenceTo>Data_Manager_Object__mdt</referenceTo>
    <relationshipLabel>Data Manager Fields</relationshipLabel>
    <relationshipName>Data_Manager_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>