force-app/main/default/objects/Data_Manager_Field__mdt/fields/Evaluate_Next_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Evaluate_Next_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evaluate Next Criteria</label>
    <type>Checkbox</type>
</CustomField>