force-app/main/default/objects/Data_Manager_Field__mdt/fields/Logical_Operator__c.field-meta.xml
<CustomField>
    <fullName>Logical_Operator__c</fullName>
    <label>Logical Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>