force-app/main/default/objects/Data_Manager_Field__mdt/fields/Logical_Operator_For_Next__c.field-meta.xml
<CustomField>
    <fullName>Logical_Operator_For_Next__c</fullName>
    <label>Logical Operator For Next</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
                <default>true</default>
                <label>AND</label>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>NOT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>