force-app/main/default/objects/Data_Manager_Field__mdt/fields/Suffix_Iterator__c.field-meta.xml
<CustomField>
    <fullName>Suffix_Iterator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suffix Iterator</label>
    <type>Checkbox</type>
</CustomField>